# toolaccess

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tool_access_vnext_proposal.md
plans/: test-reorganization.md
src/toolaccess/: __init__.py  codecs.py  context.py  definition.py  pipeline.py  renderers.py  toolaccess.py
tests/: conftest.py  test_auth.py  test_codecs.py  test_context.py  test_context_injection.py  test_edge_cases.py  test_integration.py  test_mcp_pydantic_param.py  test_pipeline.py  test_pydantic_support.py  test_renderers.py  test_toolaccess.py  test_toolaccess_features.py
tests/mcp_consumer/: pydantic_param_tools.py
