[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolaccess"
version = "1.0.0"
description = "Make your custom tools accessible across multiple protocols, including MCP, REST and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "fastmcp",
    "pydantic",
    "typer",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/whogben/toolaccess"
Repository = "https://github.com/whogben/toolaccess"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
