[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolaccess"
version = "1.2.0"
description = "Make your custom tools accessible across multiple protocols, including MCP, REST and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "fastmcp",
    "pydantic",
    "typer",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/whogben/toolaccess"
Repository = "https://github.com/whogben/toolaccess"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
